namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: sample
    app.kubernetes.io/name: sample
  name: sample
