service-active.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-active
  namespace: sample
spec:
  selector:
    app: sample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
