service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
  namespace: sample
spec:
  selector:
    app: kuard
  ports:
  - port: 80
    targetPort: 8080
