ingress-active.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-active
  namespace: sample
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
  - hosts:
    - sample.test.tlqkf.wtf
    secretName: sample-tls
  rules:
  - host: sample.test.tlqkf.wtf
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-active
            port:
              number: 80
