ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-preview
  namespace: sample
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
  - hosts:
    - prev-test.test.tlqkf.wtf
    secretName: sample-tls-preview
  rules:
  - host: prev-test.test.tlqkf.wtf
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-preview
            port:
              number: 80
